; ModuleID = '/home/carl/AnghaBench/xhyve/src/extr_smbiostbl.c_smbios_type4_initializer.c'
source_filename = "/home/carl/AnghaBench/xhyve/src/extr_smbiostbl.c_smbios_type4_initializer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.smbios_structure = type { i32 }
%struct.smbios_table_type4 = type { i64 }

@guest_ncpus = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [8 x i8] c"CPU #%d\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.smbios_structure*, i8**, i8*, i8**, i32*, i32*)* @smbios_type4_initializer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @smbios_type4_initializer(%struct.smbios_structure* %0, i8** %1, i8* %2, i8** %3, i32* %4, i32* %5) #0 {
  %7 = alloca %struct.smbios_structure*, align 8
  %8 = alloca i8**, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8**, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca %struct.smbios_table_type4*, align 8
  %15 = alloca i8*, align 8
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  store %struct.smbios_structure* %0, %struct.smbios_structure** %7, align 8
  store i8** %1, i8*** %8, align 8
  store i8* %2, i8** %9, align 8
  store i8** %3, i8*** %10, align 8
  store i32* %4, i32** %11, align 8
  store i32* %5, i32** %12, align 8
  store i32 0, i32* %13, align 4
  br label %18

18:                                               ; preds = %75, %6
  %19 = load i32, i32* %13, align 4
  %20 = load i32, i32* @guest_ncpus, align 4
  %21 = icmp slt i32 %19, %20
  br i1 %21, label %22, label %78

22:                                               ; preds = %18
  %23 = load %struct.smbios_structure*, %struct.smbios_structure** %7, align 8
  %24 = load i8**, i8*** %8, align 8
  %25 = load i8*, i8** %9, align 8
  %26 = load i8**, i8*** %10, align 8
  %27 = load i32*, i32** %11, align 8
  %28 = load i32*, i32** %12, align 8
  %29 = call i32 @smbios_generic_initializer(%struct.smbios_structure* %23, i8** %24, i8* %25, i8** %26, i32* %27, i32* %28)
  %30 = load i8*, i8** %9, align 8
  %31 = bitcast i8* %30 to %struct.smbios_table_type4*
  store %struct.smbios_table_type4* %31, %struct.smbios_table_type4** %14, align 8
  %32 = load i8*, i8** %9, align 8
  %33 = getelementptr inbounds i8, i8* %32, i64 8
  store i8* %33, i8** %15, align 8
  store i32 0, i32* %16, align 4
  br label %34

34:                                               ; preds = %49, %22
  %35 = load i8*, i8** %15, align 8
  %36 = load i8**, i8*** %10, align 8
  %37 = load i8*, i8** %36, align 8
  %38 = getelementptr inbounds i8, i8* %37, i64 -1
  %39 = icmp ult i8* %35, %38
  br i1 %39, label %40, label %50

40:                                               ; preds = %34
  %41 = load i8*, i8** %15, align 8
  %42 = getelementptr inbounds i8, i8* %41, i32 1
  store i8* %42, i8** %15, align 8
  %43 = load i8, i8* %41, align 1
  %44 = sext i8 %43 to i32
  %45 = icmp eq i32 %44, 0
  br i1 %45, label %46, label %49

46:                                               ; preds = %40
  %47 = load i32, i32* %16, align 4
  %48 = add nsw i32 %47, 1
  store i32 %48, i32* %16, align 4
  br label %49

49:                                               ; preds = %46, %40
  br label %34

50:                                               ; preds = %34
  %51 = load i8**, i8*** %10, align 8
  %52 = load i8*, i8** %51, align 8
  %53 = getelementptr inbounds i8, i8* %52, i64 -1
  %54 = load i32, i32* %13, align 4
  %55 = call i32 @sprintf(i8* %53, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i32 %54)
  %56 = add nsw i32 %55, 1
  store i32 %56, i32* %17, align 4
  %57 = load i32, i32* %17, align 4
  %58 = sub nsw i32 %57, 1
  %59 = load i8**, i8*** %10, align 8
  %60 = load i8*, i8** %59, align 8
  %61 = sext i32 %58 to i64
  %62 = getelementptr inbounds i8, i8* %60, i64 %61
  store i8* %62, i8** %59, align 8
  %63 = load i8**, i8*** %10, align 8
  %64 = load i8*, i8** %63, align 8
  store i8 0, i8* %64, align 1
  %65 = load i8**, i8*** %10, align 8
  %66 = load i8*, i8** %65, align 8
  %67 = getelementptr inbounds i8, i8* %66, i32 1
  store i8* %67, i8** %65, align 8
  %68 = load i32, i32* %16, align 4
  %69 = add nsw i32 %68, 1
  %70 = sext i32 %69 to i64
  %71 = load %struct.smbios_table_type4*, %struct.smbios_table_type4** %14, align 8
  %72 = getelementptr inbounds %struct.smbios_table_type4, %struct.smbios_table_type4* %71, i32 0, i32 0
  store i64 %70, i64* %72, align 8
  %73 = load i8**, i8*** %10, align 8
  %74 = load i8*, i8** %73, align 8
  store i8* %74, i8** %9, align 8
  br label %75

75:                                               ; preds = %50
  %76 = load i32, i32* %13, align 4
  %77 = add nsw i32 %76, 1
  store i32 %77, i32* %13, align 4
  br label %18

78:                                               ; preds = %18
  ret i32 0
}

declare dso_local i32 @smbios_generic_initializer(%struct.smbios_structure*, i8**, i8*, i8**, i32*, i32*) #1

declare dso_local i32 @sprintf(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
